# Minerva-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProjects.bat  README.md  main.cpp  make.bat  premake5.lua
Backup/: minervabackup.h  testappBackup.cpp
Include/: minerva.h
Minerva/src/: Minerva.h  Test.cpp  Test.h  mvpch.h
Minerva/src/Minerva/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h  Window.h
Minerva/src/Minerva/Events/: AppEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Minerva/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Test/src/: Application.cpp  TestApp.cpp
assets/models/: Sphere3.mtl  katana.mtl  plane.mtl  test.mtl
assets/shaders/: compile.bat  frag.spv  shader.frag  shader.vert  vert.spv
include/: minerva.h
log/: log.cpp  log.h
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  main.cpp
src/core/events/: events.h  inputEvents.h
src/core/window/: window.cpp  window.h
src/editor/: CMakeLists.txt  editor.cpp  mesh_loader.cpp  mesh_loader.h  modules.h  scene_creator.cpp  scene_creator.h  scene_saver.cpp  scene_saver.h
src/engine/: CMakeLists.txt
src/engine/core/: CMakeLists.txt  config.h  config.h.in  init.cpp  main.cpp  minerva.cpp  minerva.h  run.cpp
src/engine/core/events/: appEvents.h  events.h  inputEvents.h
src/engine/core/scene/: mesh.cpp  mesh.h  meshloader.cpp  meshloader.h  module.h  modules.h  object.cpp  object.h  scene.cpp  scene.h  sceneloader.cpp  sceneloader.h
src/engine/core/window/: window.cpp  window.h
src/engine/log/: log.cpp  log.h
src/engine/vulkan/: CMakeLists.txt  config.h  config.h.in  vulkan.cpp  vulkan.h
src/log/: CMakeLists.txt  log.cpp  log.h
src/vulkan/: CMakeLists.txt  config.h  vulkan.cpp  vulkan.h
testapp/: CMakeLists.txt  game.cpp  testapp.cpp
